--- a/css/style.css
+++ b/css/style.css
@@ -6,13 +6,14 @@ body{
 	margin: 0;
 	font: 1.375rem/1.5 "Spoqa Han Sans", Dotum, Sans-Serif;
 	color:#fff;
-	background: #000 url("..Assets/main-page-bg.jpg") no-repeat center top;
+	background: #000 url("../Assets/main-page-bg.jpg") no-repeat center top;
 }
 
 h1{
 	margin:0;
 	font-weight: 200;
 	font-size: 5rem;
+	animation: wiggle 3s infinite; 
 }
 
 @keyframes wiggle {
@@ -24,6 +25,6 @@ h1{
 
 	25%, 75% {
 		text-shadow: 0 0 2px #3e180d;
-		transform: scale();
+		transform: scale(1);
 	}
 }
