--- a/css/style.css
+++ b/css/style.css
@@ -19,12 +19,16 @@ h1{
 @keyframes wiggle {
 	0%, 50%, 100% {
 		text-shadow:0 0 10px #3e180d;
-		transform: scale(1);
+		transform: scale(0.6);
+		font-size: 2rem;
 		opacity: 0.6;
 }
 
 	25%, 75% {
 		text-shadow: 0 0 2px #3e180d;
-		transform: scale(1);
+		transform: scale(1.1);
+		letter-spacing: 0;
+		font-size: 4rem;
+		opacity: 1;
 	}
 }
